fixes overflow of msg input & btns

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -180,7 +180,7 @@ a {
 }
 
 #chat-form{
-	overflow: scroll;
+	overflow: auto;
 }
 
 #chat-form input {
